--- a/lifecycle-data/products/visual-studio-2010.yml
+++ b/lifecycle-data/products/visual-studio-2010.yml
@@ -2,20 +2,23 @@
 metadata:
   title: Visual Studio 2010
   description: Visual Studio 2010 volgt het vaste levenscyclusbeleid.
-  ms.date: 01/08/2021
-  keywords: vsto,Agents,All,ASP .NET MVC 4,Express,F# 2.0 Runtime,Lab Management,Performance Tools,Premium,Professional,Professional w/MSDN ,PSM,Remote Debugger,SDK,Shell (Integrated),Shell (Isolated),Team Agents,Team Explorer,Test Professional,Tools for Office System 4.0 Runtime (VSTO),Ultimate,Ultimate with MSDN,Visual Basic Express,Visual C# Express,Visual C++ Express,Visual Web Developer Express,Visualization & Modeling SDK
-  ms.openlocfilehash: 3be7da8e44781d5d6f8224f368939d01c2aa791f
-  ms.sourcegitcommit: f421264e594745037c28e9666463fd92fd55fdec
+  ms.date: 05/28/2021
+  keywords: vsto,Agents,All,ASP .NET MVC 4,Express,F# 2.0 Runtime,Lab Management,Performance Tools,Premium,Professional,Professional w/MSDN ,PSM,Remote Debugger,SDK,Shell (Integrated),Shell (Isolated),Team Agents,Team Explorer,Test Professional,Ultimate,Ultimate with MSDN,Visual Basic Express,Visual C# Express,Visual C++ Express,Visual Web Developer Express,Visualization & Modeling SDK
+  ms.openlocfilehash: 3458cbccdbd3a27120cadd0dcc0df44834425297
+  ms.sourcegitcommit: 51a7221b87d358960376e2569c3b1e69ba056b54
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 01/08/2021
-  ms.locfileid: "1375244"
+  ms.lasthandoff: 06/25/2021
+  ms.locfileid: "2029944"
 name: Visual Studio 2010
 summary: >+
   Visual Studio 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-  Dit is van toepassing op de volgende edities: Agents, alle, ASP .NET MVC 4, Express, F# 2.0 Runtime, Lab Management, prestatiehulpprogramma's, Premium, Professional, Professional w/MSDN, PSM, externe foutopsporing, SDK, Shell (geïntegreerde modus), Shell (geïsoleerde modus), Team Agents, Team Explorer, Test Professional, hulpprogramma's voor Office System 4.0 Runtime, Ultimate, Ultimatie met MSDN, VB Express, Visual C# Express, Visual C++ Express, Visual Web Developer Express, Visualization en Modeling SDK
+
+  Dit geldt voor de volgende edities: Agents, Alles, ASP .NET MVC 4, Express, F# 2.0 Runtime, Lab Management, Performance Tools, Premium, Professional, Professional w/MSDN, PSM, Remote Debugger, SDK, Shell (geïntegreerd), Shell (geïsoleerd), Team Agents, Team Explorer, Test Professional, Ultimate, Ultimate met MSDN, Visual Basic Express, Visual C# Express, Visual C++ Express, Visual Web Developer Express, Visualization & Modeling SDK
+
+
 
 products:
 - vs
@@ -31,4 +34,4 @@ releases:
 - version: Original Release
   startDate: 06/29/2010
   endDate: 04/10/2012
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Alles\n* ASP .NET MVC 4\n* Express\n* F# 2.0 Runtime\n* Lab Management\n* Prestatiehulpprogramma's\n* Premium\n* Professional\n* Professional met MSDN \n* PSM\n* Externe foutopsporing\n* SDK\n* Shell (geïntegreerde modus)\n* Shell (geïsoleerde modus)\n* Team Agents\n* Team Explorer\n* Test Professional\n* Hulpprogramma's voor Office System 4.0 Runtime (VSTO)\n* Ultimate\n* Ultimate met MSDN\n* Visual Basic Express\n* Visual C# Express\n* Visual C++ Express\n* Visual Web Developer Express\n* Visualization & Modeling SDK"
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n> [!NOTE]\n> De Visual Studio 2010 Tools for Office (VSTO) Runtime wordt geleverd met verschillende versies van Visual Studio en Microsoft Office en volgt de levenscyclus van het bovenliggende product. Het kan ook [hier](https://www.microsoft.com/download/details.aspx?id=56961) afzonderlijk worden gedownload.\n\n\n## <a name=\"editions\"></a>Edities \n* Agents\n* Alles\n* ASP .NET MVC 4\n* Express\n* F# 2.0 Runtime\n* Lab Management\n* Prestatiehulpprogramma's\n* Premium\n* Professional\n* Professional met MSDN \n* PSM\n* Externe foutopsporing\n* SDK\n* Shell (geïntegreerde modus)\n* Shell (geïsoleerde modus)\n* Team Agents\n* Team Explorer\n* Test Professional\n* Ultimate\n* Ultimate met MSDN\n* Visual Basic Express\n* Visual C# Express\n* Visual C++ Express\n* Visual Web Developer Express\n* Visualization & Modeling SDK"
