--- a/lifecycle-data/products/microsoft-sql-server-2008.yml
+++ b/lifecycle-data/products/microsoft-sql-server-2008.yml
@@ -2,14 +2,14 @@
 metadata:
   title: Microsoft SQL Server 2008
   description: Microsoft SQL Server 2008 volgt het vaste levenscyclusbeleid.
-  ms.date: 09/01/2020
-  keywords: Datacenter,Developer,Enterprise,Express,Express with Advanced Services,Standard,Standard Edition for Small Business,Web,Workgroup
-  ms.openlocfilehash: e5bb477dc06874d285717a07c49f44473f599d63
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
+  ms.date: 04/23/2021
+  keywords: 
+  ms.openlocfilehash: bf97b00aace187ebc920769587e01fd75311565e
+  ms.sourcegitcommit: 51a7221b87d358960376e2569c3b1e69ba056b54
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "929709"
+  ms.lasthandoff: 06/25/2021
+  ms.locfileid: "2028945"
 name: Microsoft SQL Server 2008
 summary: >
   Microsoft SQL Server 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
@@ -29,6 +29,15 @@ supportDates:
   end: 07/08/2014
   extendedEnd: 07/09/2019
 releases:
+- version: Extended Security Update Year 3
+  startDate: 07/13/2021
+  endDate: 07/12/2022
+- version: Extended Security Update Year 2
+  startDate: 07/14/2020
+  endDate: 07/13/2021
+- version: Extended Security Update Year 1
+  startDate: 07/09/2019
+  endDate: 07/14/2020
 - version: Service Pack 4
   startDate: 07/07/2014
   endDate: 07/09/2019
@@ -44,4 +53,4 @@ releases:
 - version: Original Release
   startDate: 11/06/2008
   endDate: 04/13/2010
-content: "> [!TIP]\n> Uitgebreide beveiligingsupdates (ESU) zijn beschikbaar voor de Datacenter-, Standaard-, Enterprise-, Web-, Workgroup- en Embedded-edities van dit product tot nog drie jaar na het einde van de ondersteuning.\n\n## <a name=\"links\"></a>Koppelingen \n* [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)\n* [SQL Release Services-blog](https://blogs.msdn.com/b/sqlreleaseservices/archive/2014/09/26/sql-server-2008-r2-service-pack-3-has-released.aspx)\n* [Richtlijnen voor migratie](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Alleen voor IA64 wordt SP3 ondersteund tot 09-07-2019.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Developer\n* Enterprise\n* Express\n* Express met geavanceerde services\n* Standaard\n* Standaardeditie voor Professionals en Kleine Bedrijven\n* Web\n* Workgroup"
+content: "> [!TIP]\n> *Voor de Datacenter-, Standaard-, Enterprise-, Web- en Workgroup-editie van dit product zijn extra beveiligingsupdates (ESU) beschikbaar, en dit voor maximaal drie jaar na het einde van de ondersteuning. Neem contact op met uw Microsoft-partner of accountteam voor meer informatie. \n\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://azure.microsoft.com/blog/announcing-new-options-for-sql-server-2008-and-windows-server-2008-end-of-support/)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n* [SQL Release Services-blog](https://blogs.msdn.com/b/sqlreleaseservices/archive/2014/09/26/sql-server-2008-r2-service-pack-3-has-released.aspx)\n* [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)\n\n> [!NOTE]\n> Alleen voor IA64 wordt SP3 ondersteund tot 09/07/2019.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Developer\n* Enterprise\n* Express\n* Express met geavanceerde services\n* Standard\n* Standaardeditie voor Professionals en Kleine Bedrijven\n* Web\n* Workgroup"
