--- a/lifecycle-data/products/windows-server-update-services-30.yml
+++ b/lifecycle-data/products/windows-server-update-services-30.yml
@@ -2,22 +2,26 @@
 metadata:
   title: Windows Server Update Services 3.0
   description: Windows Server Update Services 3.0 volgt het vaste levenscyclusbeleid.
-  ms.date: 07/28/2020
-  ms.openlocfilehash: b5e6ed046b5497010706f64c93962f1c4af0e2a0
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
+  ms.date: 05/28/2021
+  keywords: 
+  ms.openlocfilehash: 023eb852bc7c97e08a6a1d3602ed673e0ee660c1
+  ms.sourcegitcommit: 51a7221b87d358960376e2569c3b1e69ba056b54
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812615"
+  ms.lasthandoff: 06/25/2021
+  ms.locfileid: "2029796"
 name: Windows Server Update Services 3.0
-summary: >
+summary: >+
   Windows Server Update Services 3.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+
 
 
 
   > [!IMPORTANT]
 
-  > De ondersteuning is beëindigd. Zie hieronder de richtlijnen voor migratie.
+  > De ondersteuning is beëindigd. Houd er rekening mee dat WSUS 3.0 SP2 het veiligere TLS 1.2-cryptografische protocol niet ondersteunt. Alle organisaties die nog steeds WSUS 3.0 SP2 gebruiken, moeten vóór 31 oktober 2021 migreren naar een ondersteunde versie van WSUS.
+
 products:
 - windows
 policyType: fixed
@@ -35,4 +39,4 @@ releases:
 - version: Original Release
   startDate: 07/10/2007
   endDate: 07/14/2009
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://technet.microsoft.com/library/mt772341%28WS.11%29.aspx)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De ondersteuning is verlengd van 11/07/2017 tot 14/01/2020."
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://technet.microsoft.com/library/mt772341%28WS.11%29.aspx)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n> [!NOTE]\n> De ondersteuning is verlengd van 11/07/2017 tot 14/01/2020."
