--- a/lifecycle-data/products/azure-dev-spaces.yml
+++ b/lifecycle-data/products/azure-dev-spaces.yml
@@ -2,17 +2,20 @@
 metadata:
   title: Azure Dev Spaces
   description: Azure Dev Spaces volgt het moderne levenscyclusbeleid.
-  ms.date: 10/23/2020
+  ms.date: 05/25/2021
   keywords: 
-  ms.openlocfilehash: 5515482a34b1ab76c4eeff99285a4ee92208fb74
-  ms.sourcegitcommit: d8b1db284677f98b7bec16144811251ac9a84958
+  ms.openlocfilehash: 53caca2345aab6b322131609112fd2851725f813
+  ms.sourcegitcommit: f887c74eefa2b8760c19b0b6ff5dda6d6829c06a
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 10/24/2020
-  ms.locfileid: "1186535"
+  ms.lasthandoff: 07/12/2021
+  ms.locfileid: "2117546"
 name: Azure Dev Spaces
 summary: >+
   Azure Dev Spaces volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
+
+
+
 
 
 products:
@@ -20,9 +23,9 @@ products:
 policyType: modern-online
 supportDates:
   start: 04/25/2019
-  end: 10/31/2023
+  end: 05/15/2021
 releases:
 - version: Original Release
   startDate: 04/25/2019
   endDate: 10/31/2023
-content: "\n\n> [!NOTE]\n> Klanten moeten migreren naar [Bridge to Kubernetes](https://docs.microsoft.com/azure/dev-spaces/migrate-to-bridge-to-kubernetes), een ontwikkelhulpprogramma voor clients."
+content: "\n\n\n\n> [!NOTE]\n> Klanten moeten migreren naar [Bridge to Kubernetes](https://docs.microsoft.com/azure/dev-spaces/migrate-to-bridge-to-kubernetes), een ontwikkelhulpprogramma voor clients."
