--- a/lifecycle-data/products/microsoft-edge.yml
+++ b/lifecycle-data/products/microsoft-edge.yml
@@ -2,23 +2,26 @@
 metadata:
   title: Microsoft Edge
   description: Microsoft Edge volgt het moderne levenscyclusbeleid.
-  ms.date: 10/20/2020
+  ms.date: 07/17/2021
   keywords: 
-  ms.openlocfilehash: b6634ea1575408641dd760ce54e0733af04c5941
-  ms.sourcegitcommit: a0744017304a3d2e709f964e643feb7903d05c2d
+  ms.openlocfilehash: 81aabf800a7f4fa41266ade0acae6723211cdc4f
+  ms.sourcegitcommit: 1629a54febaf89d1050ce02280d58f9ec8736d8c
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 10/21/2020
-  ms.locfileid: "1162998"
+  ms.lasthandoff: 07/23/2021
+  ms.locfileid: "2172035"
 name: Microsoft Edge
-summary: >
+summary: >+
   Microsoft Edge volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
+
+
 
 
 
   > [!IMPORTANT]
 
-  > Neem in acht dat de ondersteuning voor de oudere versie (Legacy) van dit product eindigt op 9 maart 2021. Volg [deze koppeling](https://techcommunity.microsoft.com/t5/microsoft-365-blog/microsoft-365-apps-say-farewell-to-internet-explorer-11-and/ba-p/1591666) voor meer informatie.
+  > Neem in acht dat de ondersteuning voor de oudere versie (Legacy) van dit product eindigt op 9 maart 2021. Klik [hier](https://techcommunity.microsoft.com/t5/microsoft-365-blog/microsoft-365-apps-say-farewell-to-internet-explorer-11-and/ba-p/1591666) voor meer informatie.
+
 products:
 - microsoft-edge
 policyType: modern-on-prem
@@ -27,4 +30,4 @@ supportDates:
 releases:
 - version: Original Release
   startDate: 01/15/2020
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Door Microsoft Edge ondersteunde besturingssystemen](/deployedge/microsoft-edge-supported-operating-systems)\n* [Veelgestelde vragen over de levenscyclus - Internet Explorer en Edge](/lifecycle/faq/internet-explorer-microsoft-edge)"
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Door Microsoft Edge ondersteunde besturingssystemen](/deployedge/microsoft-edge-supported-operating-systems)\n* [Veelgestelde vragen over de levenscyclus - Internet Explorer en Edge](/lifecycle/faq/internet-explorer-microsoft-edge)\n* [Levenscyclusbeleid van Microsoft Edge](/deployedge/microsoft-edge-support-lifecycle)"
