--- a/lifecycle-data/products/windows-server-2019.yml
+++ b/lifecycle-data/products/windows-server-2019.yml
@@ -2,20 +2,23 @@
 metadata:
   title: Windows Server 2019
   description: Windows Server 2019 volgt het vaste levenscyclusbeleid.
-  ms.date: 09/01/2020
-  keywords: Datacenter,Essentials,Standard
-  ms.openlocfilehash: 8967355f6556b020b48bca6259870c05be45f09e
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
+  ms.date: 07/09/2021
+  keywords: 
+  ms.openlocfilehash: dbba3f3d791a3646dc46974ddf37f64c83207bed
+  ms.sourcegitcommit: 4e981a76c3185e8691faa3033ff05c685bba0999
   ms.translationtype: HT
   ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "939329"
+  ms.lasthandoff: 07/28/2021
+  ms.locfileid: "2255322"
 name: Windows Server 2019
 summary: >+
   Windows Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
+
   Dit is van toepassing op de volgende edities: Datacenter, Essentials, Standard
+
+
 
 products:
 - windows
@@ -28,4 +31,4 @@ releases:
 - version: Original Release
   startDate: 11/13/2018
   endDate: 01/09/2029
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/windows-server/get-started-19/whats-new-19)\n* [Beschikbaarheid update Windows Server 2019](https://aka.ms/WSRelaunchBlog)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n\n> [!NOTE]\n> Windows Server 2019 en Windows Server, versie 1809 zijn opnieuw uitgebracht op 13 november 2018. De ondersteuningsdatums zijn op basis hiervan aangepast.\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Essentials\n* Standard"
+content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/windows-server/get-started-19/whats-new-19)\n* [Beschikbaarheid update Windows Server 2019](https://aka.ms/WSRelaunchBlog)\n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n* [Onderhoudslevenscycli van Windows-containerbasisafbeelding.](/virtualization/windowscontainers/deploy-containers/base-image-lifecycle)\n\n\n> [!NOTE]\n> Containers die zijn uitgebracht met Windows Server 2019 volgen dezelfde levenscyclusdatums.\n> [!NOTE]\n> Windows Server 2019 en Windows Server, versie 1809 zijn opnieuw uitgebracht op 13 november 2018. De ondersteuningsdatums zijn op basis hiervan aangepast.\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Essentials\n* Standard"
