commit translated contents

--- a/lifecycle-data/products/expression.yml
+++ b/lifecycle-data/products/expression.yml
@@ -3,24 +3,34 @@ metadata:
   title: Expression
   description: Expression volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Blend,Design,Encoder,Studio
-  ms.openlocfilehash: 2d2e5c18c1e8ca1b355bfe392df42d6a351e6585
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "936221"
+  keywords: 'Blend,Design,Encoder,Studio'
 name: Expression
-summary: "Expression volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Blend, Design, Encoder, Studio\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+summary: |
+  Expression volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+  Dit is van toepassing op de volgende edities: Blend, Design, Encoder, Studio
+
+  > [!IMPORTANT]
+  > De ondersteuning voor dit product is beëindigd. 
 products:
-- expression
+  - expression
 policyType: fixed
 supportDates:
   start: 07/27/2007
   end: 10/09/2012
   extendedEnd: 10/10/2017
 releases:
-- version: Original Release
-  startDate: 07/27/2007
-  endDate: 10/10/2017
-content: "\n\n> [!NOTE]\n> De begindatum voor Expression Blend is 13 juli 2007. \n\n## <a name=\"editions\"></a>Edities \n* Blend\n* Design\n* Encoder\n* Studio"
+  - version: Original Release
+    startDate: 07/27/2007
+    endDate: 10/10/2017
+content: |
+
+
+  > [!NOTE]
+  > De begindatum voor Expression Blend is 13 juli 2007. 
+
+  ## <a name="editions"></a>Edities 
+  * Blend
+  * Design
+  * Encoder
+  * Studio
