--- a/lifecycle-data/products/microsoft-word-for-mac-2011.yml
+++ b/lifecycle-data/products/microsoft-word-for-mac-2011.yml
@@ -3,22 +3,25 @@ metadata:
   title: Microsoft Word voor Mac 2011
   description: Microsoft Word voor Mac 2011 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: a33ce7f2ee56098ccc8b316733d42042b842a84d
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851906"
 name: Microsoft Word voor Mac 2011
-summary: "Microsoft Word voor Mac 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+summary: |
+  Microsoft Word voor Mac 2011 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+
+  > [!IMPORTANT]
+  > De ondersteuning voor dit product is beëindigd. 
 products:
-- office
+  - office
 policyType: fixed-mainstream-only
 supportDates:
   start: 12/09/2010
   end: 10/10/2017
 releases:
-- version: Original Release
-  startDate: 12/09/2010
-  endDate: 10/10/2017
-content: "\n\n> [!NOTE]\n> De basisondersteuning voor Microsoft Office voor Mac 2011 wordt, zoals weergegeven, verlengd om alle klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden."
+  - version: Original Release
+    startDate: 12/09/2010
+    endDate: 10/10/2017
+content: |+
+
+
+  > [!NOTE]
+  > De basisondersteuning voor Microsoft Office voor Mac 2011 wordt, zoals weergegeven, verlengd om alle klanten de standaard tijdlijn voor de overgang van de levenscyclus te bieden.
