--- a/lifecycle-data/products/wunderlist.yml
+++ b/lifecycle-data/products/wunderlist.yml
@@ -3,23 +3,25 @@ metadata:
   title: Wunderlist
   description: Wunderlist volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: dd978a839e950577c0854ee914df4114d50a9865
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851725"
 name: Wunderlist
-summary: "Wunderlist volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf. De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
+summary: |
+  Wunderlist volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+
+  > [!IMPORTANT]
+  > Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf. De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 06/02/2015
   end: 05/06/2020
   extendedEnd: 05/06/2020
 releases:
-- version: Original Release
-  startDate: 06/02/2015
-  endDate: 05/06/2020
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://www.wunderlist.com/blog/join-us-on-our-new-journey)"
+  - version: Original Release
+    startDate: 06/02/2015
+    endDate: 05/06/2020
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://www.wunderlist.com/blog/join-us-on-our-new-journey)
