--- a/lifecycle-data/products/fast-search-server-2010-for-sharepoint.yml
+++ b/lifecycle-data/products/fast-search-server-2010-for-sharepoint.yml
@@ -1,37 +1,41 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites)
-  description: FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites) volgt het vaste levenscyclusbeleid.
+  title: 'FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites)'
+  description: 'FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites) volgt het vaste levenscyclusbeleid.'
   ms.date: 09/01/2020
-  keywords: for SharePoint,for SharePoint Internet Sites
-  ms.openlocfilehash: c027838c1f802c0ed026d733a9412fe15980c093
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "936147"
-name: FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites)
-summary: >+
+  keywords: 'for SharePoint,for SharePoint Internet Sites'
+name: 'FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites)'
+summary: |+
   FAST Search Server 2010 (voor SharePoint, voor SharePoint internetsites) volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit geldt voor de volgende edities: voor SharePoint, voor SharePoint internetsites
 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 06/16/2010
   end: 10/13/2015
   extendedEnd: 10/13/2020
 releases:
-- version: Service Pack 2
-  startDate: 07/23/2013
-  endDate: 10/13/2020
-- version: Service Pack 1
-  startDate: 06/24/2011
-  endDate: 07/23/2014
-- version: Original Release
-  startDate: 06/16/2010
-  endDate: 07/10/2012
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101711)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Uitgesloten versies waarvan de ondersteuning eerder werd stopgezet. Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf.\n\n## <a name=\"editions\"></a>Edities \n* voor SharePoint\n* voor SharePoint internetsites"
+  - version: Service Pack 2
+    startDate: 07/23/2013
+    endDate: 10/13/2020
+  - version: Service Pack 1
+    startDate: 06/24/2011
+    endDate: 07/23/2014
+  - version: Original Release
+    startDate: 06/16/2010
+    endDate: 07/10/2012
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101711)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+  > [!NOTE]
+  > Uitgesloten versies waarvan de ondersteuning eerder werd stopgezet. Ondersteuning voor dit product is onderworpen aan de voorwaarden van zijn aanschaf.
+
+  ## <a name="editions"></a>Edities 
+  * voor SharePoint
+  * voor SharePoint internetsites
