--- a/lifecycle-data/products/microsoft-application-virtualization-hosting-45.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-hosting-45.yml
@@ -1,41 +1,40 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Application Virtualization Hosting 4.5 voor Windows Desktops
+  title: Microsoft Application Virtualization Hosting 4.5 voor Windows-desktops
   description: Microsoft Application Virtualization Hosting 4.5 voor Windows Desktops volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: for Windows Desktops
-  ms.openlocfilehash: 50fe924f5e1b5968a41beea54c1cc30d5df28434
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "935481"
-name: Microsoft Application Virtualization Hosting 4.5 voor Windows Desktops
-summary: >
+name: Microsoft Application Virtualization Hosting 4.5 voor Windows-desktops
+summary: |
   Microsoft Application Virtualization Hosting 4.5 voor Windows Desktops volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit geldt voor de volgende edities: voor Windows Desktops
 
-
   > [!IMPORTANT]
-
   > De ondersteuning voor dit product is beëindigd. Zie onderstaande migratiegegevens.
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 11/23/2008
   end: 01/14/2014
   extendedEnd: 01/08/2019
 releases:
-- version: Service Pack 2
-  startDate: 08/15/2010
-  endDate: 01/08/2019
-- version: Service Pack 1
-  startDate: 12/13/2009
-  endDate: 10/11/2011
-- version: Original Release
-  startDate: 11/23/2008
-  endDate: 01/11/2011
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Product- en migratiegegevens](/microsoft-desktop-optimization-pack/appv-v4/overview-of-application-virtualization)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* voor Windows Desktops"
+  - version: Service Pack 2
+    startDate: 08/15/2010
+    endDate: 01/08/2019
+  - version: Service Pack 1
+    startDate: 12/13/2009
+    endDate: 10/11/2011
+  - version: Original Release
+    startDate: 11/23/2008
+    endDate: 01/11/2011
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Product- en migratiegegevens](/microsoft-desktop-optimization-pack/appv-v4/overview-of-application-virtualization)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+
+  ## <a name="editions"></a>Edities 
+  * voor Windows Desktops
