--- a/lifecycle-data/products/microsoft-internet-information-services-80.yml
+++ b/lifecycle-data/products/microsoft-internet-information-services-80.yml
@@ -3,23 +3,23 @@ metadata:
   title: Microsoft Internet Information Services 8.0
   description: Microsoft Internet Information Services 8.0 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 71be1061b611798489998e4437c1e3d80bbe19b3
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811817"
 name: Microsoft Internet Information Services 8.0
-summary: >+
+summary: |+
   Microsoft Internet Information Services 8.0 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
-- windows
+  - windows
 policyType: component
 supportDates:
   start: 10/30/2012
 releases:
-- version: Original Release
-  startDate: 10/30/2012
-content: "> [!TIP]\n> Deze release staat bekend als een onderdeel die de ondersteuningslevenscyclus volgt van het bovenliggende hoofdproduct, Windows Server 2012 en Windows 8\n\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server 2012](/lifecycle/products/windows-server-2012)\n* [Windows 8](/lifecycle/products/windows-8)"
+  - version: Original Release
+    startDate: 10/30/2012
+content: |+
+  > [!TIP]
+  > Deze release staat bekend als een onderdeel die de ondersteuningslevenscyclus volgt van het bovenliggende hoofdproduct, Windows Server 2012 en Windows 8
+
+  ## <a name="links"></a>Koppelingen 
+  * [Windows Server 2012](/lifecycle/products/windows-server-2012)
+  * [Windows 8](/lifecycle/products/windows-8)
