--- a/lifecycle-data/products/microsoft-sharepoint-server-2010.yml
+++ b/lifecycle-data/products/microsoft-sharepoint-server-2010.yml
@@ -3,35 +3,43 @@ metadata:
   title: Microsoft SharePoint Server 2010
   description: Microsoft SharePoint Server 2010 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Access Services,All applicable,Excel Services,Performance Point Services
-  ms.openlocfilehash: 02a1a5085dbd39b7379b0e71f69300095cfa54da
-  ms.sourcegitcommit: 37b80a1b6fcda4dc6147d99a362a75b884d08a51
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/02/2020
-  ms.locfileid: "941554"
+  keywords: 'Access Services,All applicable,Excel Services,Performance Point Services'
 name: Microsoft SharePoint Server 2010
-summary: >+
+summary: |+
   Microsoft SharePoint Server 2010 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Access Services, alles wat van toepassing is, Excel Services, Performance Point Services
 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 07/15/2010
   end: 10/13/2015
   extendedEnd: 04/13/2021
 releases:
-- version: Service Pack 2
-  startDate: 07/23/2013
-  endDate: 04/13/2021
-- version: Service Pack 1
-  startDate: 06/28/2011
-  endDate: 10/14/2014
-- version: Original Release
-  startDate: 07/15/2010
-  endDate: 07/10/2012
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsextensie](https://aka.ms/SharePoint/server/2010/supportextension)\n* [Richtlijnen voor migratie](/office365/enterprise/upgrade-from-sharepoint-2010)\n* [Microsoft SharePoint Server 2010-documentatie voor ontwikkelaars](/previous-versions/office/developer/sharepoint-2010/ee557253(v=office.14))\n* [Microsoft SharePoint Server 2010-productdocumentatie](/previous-versions/office/sharepoint-server-2010/cc303422(v=office.14))\n\n> [!NOTE]\n> De datum voor het einde van de ondersteuning voor dit product is uitgesteld van 13 oktober 2020 naar 13 april 2021.\n\n## <a name=\"editions\"></a>Edities \n* Access Services\n* Alles wat van toepassing is\n* Excel Services\n* Performance Point Services"
+  - version: Service Pack 2
+    startDate: 07/23/2013
+    endDate: 04/13/2021
+  - version: Service Pack 1
+    startDate: 06/28/2011
+    endDate: 10/14/2014
+  - version: Original Release
+    startDate: 07/15/2010
+    endDate: 07/10/2012
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Ondersteuningsextensie](https://aka.ms/SharePoint/server/2010/supportextension)
+  * [Richtlijnen voor migratie](/office365/enterprise/upgrade-from-sharepoint-2010)
+  * [Microsoft SharePoint Server 2010-documentatie voor ontwikkelaars](/previous-versions/office/developer/sharepoint-2010/ee557253(v=office.14))
+  * [Microsoft SharePoint Server 2010-productdocumentatie](/previous-versions/office/sharepoint-server-2010/cc303422(v=office.14))
+
+  > [!NOTE]
+  > De datum voor het einde van de ondersteuning voor dit product is uitgesteld van 13 oktober 2020 naar 13 april 2021.
+
+  ## <a name="editions"></a>Edities 
+  * Access Services
+  * Alles wat van toepassing is
+  * Excel Services
+  * Performance Point Services
