--- a/lifecycle-data/products/office-365-enterprise-government-education.yml
+++ b/lifecycle-data/products/office-365-enterprise-government-education.yml
@@ -1,25 +1,23 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Office 365 (Enterprise, Government, Education)
-  description: Office 365 (Enterprise, Government, Education) volgen het moderne levenscyclusbeleid.
+  title: 'Office 365 (Enterprise, Government, Education)'
+  description: 'Office 365 (Enterprise, Government, Education) volgen het moderne levenscyclusbeleid.'
   ms.date: 07/28/2020
-  ms.openlocfilehash: 81c940fa031fd8eea9e3895d72c1a046af048638
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851861"
-name: Office 365 (Enterprise, Government, Education)
-summary: >+
+name: 'Office 365 (Enterprise, Government, Education)'
+summary: |+
   Office 365 (Enterprise, Government, Education) volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
-- office
+  - office
 policyType: modern-online
 supportDates:
   start: 09/22/2015
 releases:
-- version: Original Release
-  startDate: 09/22/2015
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Systeemvereisten](https://products.office.com/office-system-requirements)\n* [Onderhoudsinformatie](https://technet.microsoft.com/library/mt584223.aspx)"
+  - version: Original Release
+    startDate: 09/22/2015
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Systeemvereisten](https://products.office.com/office-system-requirements)
+  * [Onderhoudsinformatie](https://technet.microsoft.com/library/mt584223.aspx)
