commit translated contents

--- a/lifecycle-data/products/infopath-2013.yml
+++ b/lifecycle-data/products/infopath-2013.yml
@@ -4,28 +4,30 @@ metadata:
   description: Infopath 2013 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
   keywords: Standard
-  ms.openlocfilehash: 7cd0b91eef230b0f5820c953c57369a58940d719
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "1002013"
 name: InfoPath 2013
-summary: >+
+summary: |+
   Infopath 2013 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Standard
 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 01/09/2013
   end: 07/13/2021
   extendedEnd: 07/14/2026
 releases:
-- version: Original Release
-  startDate: 01/09/2013
-  endDate: 07/14/2026
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsinformatie](https://blogs.office.com/2016/01/20/sharepoint-server-2016-and-project-server-2016-release-candidate-available)\n\n> [!NOTE]\n> De ondersteuning voor Microsoft InfoPath 2013 is uitgebreid zoals weergegeven om compatibiliteit met SharePoint Server 2016 te garanderen.\n\n## <a name=\"editions\"></a>Edities \n* Standard"
+  - version: Original Release
+    startDate: 01/09/2013
+    endDate: 07/14/2026
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Ondersteuningsinformatie](https://blogs.office.com/2016/01/20/sharepoint-server-2016-and-project-server-2016-release-candidate-available)
+
+  > [!NOTE]
+  > De ondersteuning voor Microsoft InfoPath 2013 is uitgebreid zoals weergegeven om compatibiliteit met SharePoint Server 2016 te garanderen.
+
+  ## <a name="editions"></a>Edities 
+  * Standard
