--- a/lifecycle-data/products/microsoft-office-2003-web-components-for-the-2007-microsoft-office-system.yml
+++ b/lifecycle-data/products/microsoft-office-2003-web-components-for-the-2007-microsoft-office-system.yml
@@ -3,25 +3,22 @@ metadata:
   title: Microsoft Office 2003 Web Components voor het 2007 Microsoft Office-systeem
   description: Microsoft Office 2003 Web Components voor het 2007 Microsoft Office-systeem volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 82cc956a80008bea8b985ccf8b1b6c3c4927b4c7
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811811"
 name: Microsoft Office 2003 Web Components voor het 2007 Microsoft Office-systeem
-summary: >+
+summary: |+
   Microsoft Office 2003 Web Components voor het 2007 Microsoft Office-systeem volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
-- office
+  - office
 policyType: component
 supportDates:
   start: 01/27/2007
   end: 10/10/2017
 releases:
-- version: Original Release
-  startDate: 01/27/2007
-  endDate: 10/10/2017
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/office/troubleshoot/support/office-2007-not-support)"
+  - version: Original Release
+    startDate: 01/27/2007
+    endDate: 10/10/2017
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](/office/troubleshoot/support/office-2007-not-support)
