--- a/lifecycle-data/products/dynamics-365-for-finance-and-operations.yml
+++ b/lifecycle-data/products/dynamics-365-for-finance-and-operations.yml
@@ -3,26 +3,29 @@ metadata:
   title: Dynamics 365 for Finance and Operations
   description: Dynamics 365 for Finance and Operations volgt het moderne levenscyclusbeleid.
   ms.date: 09/29/2020
-  keywords: 
-  ms.openlocfilehash: 22bc725cf7f990b27f83a506f26a4108f3b9fea9
-  ms.sourcegitcommit: 7ed59f943dacfc14fbd5d5593741177aa2b6431b
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/29/2020
-  ms.locfileid: "1048264"
+  keywords: null
 name: Dynamics 365 for Finance and Operations
-summary: >+
+summary: |+
   Dynamics 365 for Finance and Operations volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Enterprise
 
 products:
-- dynamics
+  - dynamics
 policyType: modern-online
 supportDates:
   start: 02/19/2016
 releases:
-- version: Original Release
-  startDate: 02/19/2016
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Microsoft Dynamics 365 Roadmap](https://roadmap.dynamics.com/)\n* [Verwijderde en afgeschafte functies](/dynamics365/fin-ops-core/dev-itpro/migration-upgrade/deprecated-features?toc=/dynamics365/finance/toc.json%22%20%5Cl%20%22us-payroll-tax-updates)\n* [Onderhoudsinformatie](/dynamics365/operations/dev-itpro/migration-upgrade/versions-update-policy)\n* [Systeemvereisten](/dynamics365/fin-ops-core/fin-ops/get-started/system-requirements)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise"
+  - version: Original Release
+    startDate: 02/19/2016
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Microsoft Dynamics 365 Roadmap](https://roadmap.dynamics.com/)
+  * [Verwijderde en afgeschafte functies](/dynamics365/fin-ops-core/dev-itpro/migration-upgrade/deprecated-features?toc=/dynamics365/finance/toc.json%22%20%5Cl%20%22us-payroll-tax-updates)
+  * [Onderhoudsinformatie](/dynamics365/operations/dev-itpro/migration-upgrade/versions-update-policy)
+  * [Systeemvereisten](/dynamics365/fin-ops-core/fin-ops/get-started/system-requirements)
+
+
+  ## <a name="editions"></a>Edities 
+  * Enterprise
