--- a/lifecycle-data/products/hyperv-server-2019.yml
+++ b/lifecycle-data/products/hyperv-server-2019.yml
@@ -3,26 +3,26 @@ metadata:
   title: Hyper-V Server 2019
   description: Hyper-V Server 2019 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 6ba8930e824f29ea98cb30ad9291ac18b0834221
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868671"
 name: Hyper-V Server 2019
-summary: >+
+summary: |+
   Hyper-V Server 2019 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 11/13/2018
   end: 01/09/2024
   extendedEnd: 01/09/2029
 releases:
-- version: Original Release
-  startDate: 11/13/2018
-  endDate: 01/09/2029
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server Community](https://techcommunity.microsoft.com/t5/windows-server/ct-p/Windows-Server)\n\n> [!NOTE]\n> Windows Server 2019 en Windows Server, versie 1809 zijn opnieuw uitgebracht op 13 november 2018. De ondersteuningsdatums zijn op basis hiervan aangepast."
+  - version: Original Release
+    startDate: 11/13/2018
+    endDate: 01/09/2029
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Windows Server Community](https://techcommunity.microsoft.com/t5/windows-server/ct-p/Windows-Server)
+
+  > [!NOTE]
+  > Windows Server 2019 en Windows Server, versie 1809 zijn opnieuw uitgebracht op 13 november 2018. De ondersteuningsdatums zijn op basis hiervan aangepast.
