--- a/lifecycle-data/products/microsoft-office-communicator-2007-r2.yml
+++ b/lifecycle-data/products/microsoft-office-communicator-2007-r2.yml
@@ -3,24 +3,32 @@ metadata:
   title: Microsoft Office Communicator 2007 R2
   description: Microsoft Office Communicator 2007 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
-  keywords: All applicable,Phone
-  ms.openlocfilehash: 1c08a0c9475ec3d3e6cfb381385a78a71b514d66
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "1001717"
+  keywords: 'All applicable,Phone'
 name: Microsoft Office Communicator 2007 R2
-summary: "Microsoft Office Communicator 2007 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit geldt voor de volgende edities: Alle toepasselijke, Phone\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Raadpleeg de richtlijnen voor migratie. \n"
+summary: |
+  Microsoft Office Communicator 2007 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+  Dit geldt voor de volgende edities: allemaal van toepassing, Phone
+
+  > [!IMPORTANT]
+  > De ondersteuning voor dit product is beëindigd. Raadpleeg de richtlijnen voor migratie. 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 03/19/2009
   end: 01/08/2013
   extendedEnd: 01/09/2018
 releases:
-- version: Original Release
-  startDate: 03/19/2009
-  endDate: 01/09/2018
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)\n\n\n## <a name=\"editions\"></a>Edities \n* Alle toepasselijke\n* Phone"
+  - version: Original Release
+    startDate: 03/19/2009
+    endDate: 01/09/2018
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://blogs.technet.microsoft.com/nexthop/2016/02/22/end-of-extended-support-for-office-communicator-and-office-communications-server/)
+
+
+  ## <a name="editions"></a>Edities 
+  * Alles wat van toepassing is
+  * Phone
