--- a/lifecycle-data/products/microsoft-sync-framework-21.yml
+++ b/lifecycle-data/products/microsoft-sync-framework-21.yml
@@ -3,26 +3,23 @@ metadata:
   title: Microsoft Sync Framework 2.1
   description: Microsoft Sync Framework 2.1 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: bc3dad267d8e7e0795160fa896915b06a7532b1c
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812348"
 name: Microsoft Sync Framework 2.1
-summary: >+
+summary: |+
   Microsoft Sync Framework 2.1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- vs
+  - vs
 policyType: fixed
 supportDates:
   start: 11/17/2010
   end: 01/12/2016
   extendedEnd: 01/12/2021
 releases:
-- version: Original Release
-  startDate: 11/17/2010
-  endDate: 01/12/2021
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/previous-versions/sql/synchronization/mt490616(v=msdn.10)?redirectedfrom=MSDN)"
+  - version: Original Release
+    startDate: 11/17/2010
+    endDate: 01/12/2021
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Productgegevens](/previous-versions/sql/synchronization/mt490616(v=msdn.10)?redirectedfrom=MSDN)
