--- a/lifecycle-data/products/microsoft-system-center-configuration-manager-2007.yml
+++ b/lifecycle-data/products/microsoft-system-center-configuration-manager-2007.yml
@@ -3,36 +3,33 @@ metadata:
   title: Microsoft System Center Configuration Manager 2007
   description: Microsoft System Center Configuration Manager 2007 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 796670fd93547cc79f69c544085070efb0116650
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812341"
 name: Microsoft System Center Configuration Manager 2007
-summary: >
+summary: |
   Microsoft System Center Configuration Manager 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-
   > [!IMPORTANT]
-
   > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
-- msc
+  - msc
 policyType: fixed
 supportDates:
   start: 11/29/2007
   end: 07/08/2014
   extendedEnd: 07/09/2019
 releases:
-- version: Service Pack 2
-  startDate: 10/22/2009
-  endDate: 07/09/2019
-- version: Service Pack 1
-  startDate: 05/21/2008
-  endDate: 01/11/2011
-- version: Original Release
-  startDate: 11/29/2007
-  endDate: 07/14/2009
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/mem/configmgr/core/migration/migrate-data-between-hierarchies)\n* [Productgegevens](/mem/configmgr/core/understand/introduction)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)"
+  - version: Service Pack 2
+    startDate: 10/22/2009
+    endDate: 07/09/2019
+  - version: Service Pack 1
+    startDate: 05/21/2008
+    endDate: 01/11/2011
+  - version: Original Release
+    startDate: 11/29/2007
+    endDate: 07/14/2009
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](/mem/configmgr/core/migration/migrate-data-between-hierarchies)
+  * [Productgegevens](/mem/configmgr/core/understand/introduction)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
