--- a/lifecycle-data/products/office-live-meeting.yml
+++ b/lifecycle-data/products/office-live-meeting.yml
@@ -4,22 +4,29 @@ metadata:
   description: Office Live Meeting volgt het moderne levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: Standard
-  ms.openlocfilehash: f5d328b887173c82655f707e9d931266c2d7b857
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "928895"
 name: Office Live Meeting
-summary: "Office Live Meeting volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor deze service is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
+summary: |
+  Office Live Meeting volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
+
+  Dit is van toepassing op de volgende edities: Standard
+
+  > [!IMPORTANT]
+  > De ondersteuning voor deze service is beëindigd. Zie hieronder de richtlijnen voor migratie. 
 products:
-- office
+  - office
 policyType: modern-online
 supportDates:
   start: 04/10/2009
   end: 12/31/2017
 releases:
-- version: Original Release
-  startDate: 04/10/2009
-  endDate: 12/31/2017
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://support.office.com/article/Live-Meeting-Server-End-of-Life-6af25745-1f4a-4bcd-8051-fd0766f53c4f)\n\n\n## <a name=\"editions\"></a>Edities \n* Standard"
+  - version: Original Release
+    startDate: 04/10/2009
+    endDate: 12/31/2017
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://support.office.com/article/Live-Meeting-Server-End-of-Life-6af25745-1f4a-4bcd-8051-fd0766f53c4f)
+
+
+  ## <a name="editions"></a>Edities 
+  * Standard
