commit translated contents

--- a/lifecycle-data/products/microsoft-application-virtualization-50.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-50.yml
@@ -3,38 +3,41 @@ metadata:
   title: Microsoft Application Virtualization 5.0
   description: Microsoft Application Virtualization 5.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: for Remote Desktop Services,for Terminal Services,for Windows Desktops
-  ms.openlocfilehash: 9606d01862383fc90e328d1fe65da5151014db76
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "935518"
+  keywords: 'for Remote Desktop Services,for Terminal Services,for Windows Desktops'
 name: Microsoft Application Virtualization 5.0
-summary: >+
+summary: |+
   Microsoft Application Virtualization 5.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
-
-  Dit geldt voor de volgende edities: voor Extern bureaublad-services, voor Terminal Services, voor Windows Desktops
+  Dit geldt voor de volgende edities: voor Extern bureaublad-services, voor Terminal Services, voor Windows-desktops
 
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 11/01/2012
   end: 01/09/2018
   extendedEnd: 01/10/2023
 releases:
-- version: Service Pack 3
-  startDate: 12/08/2014
-  endDate: 01/10/2023
-- version: Service Pack 2
-  startDate: 12/02/2013
-  endDate: 01/12/2016
-- version: Service Pack 1
-  startDate: 04/10/2013
-  endDate: 01/13/2015
-- version: Original Release
-  startDate: 11/01/2012
-  endDate: 07/08/2014
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/microsoft-desktop-optimization-pack/appv-v5/microsoft-application-virtualization-50-administrators-guide)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Voor Extern bureaublad-services\n* voor Terminal Services\n* voor Windows Desktops"
+  - version: Service Pack 3
+    startDate: 12/08/2014
+    endDate: 01/10/2023
+  - version: Service Pack 2
+    startDate: 12/02/2013
+    endDate: 01/12/2016
+  - version: Service Pack 1
+    startDate: 04/10/2013
+    endDate: 01/13/2015
+  - version: Original Release
+    startDate: 11/01/2012
+    endDate: 07/08/2014
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Productgegevens](/microsoft-desktop-optimization-pack/appv-v5/microsoft-application-virtualization-50-administrators-guide)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+
+  ## <a name="editions"></a>Edities 
+  * Voor Extern bureaublad-services
+  * voor Terminal Services
+  * voor Windows Desktops
