--- a/lifecycle-data/products/windows-server-update-services-for-windows-server-2012-r2.yml
+++ b/lifecycle-data/products/windows-server-update-services-for-windows-server-2012-r2.yml
@@ -3,26 +3,25 @@ metadata:
   title: Windows Server Update Services voor Windows Server 2012 R2
   description: Windows Server Update Services voor Windows Server 2012 R2 volgt het levenscyclusbeleid van onderdelen.
   ms.date: 01/22/2021
-  keywords: 
-  ms.openlocfilehash: efa11337dbeba8601a1ef70ef003f709f286e6b6
-  ms.sourcegitcommit: cea6a4b7fe734aba8b534ecdef302cb56c5f7cca
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 01/23/2021
-  ms.locfileid: "1416744"
+  keywords: null
 name: Windows Server Update Services voor Windows Server 2012 R2
-summary: >+
+summary: |+
   Windows Server Update Services voor Windows Server 2012 R2 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
-- windows
+  - windows
 policyType: component
 supportDates:
   start: 11/25/2013
   end: 10/10/2023
 releases:
-- version: Original Release
-  startDate: 11/25/2013
-  endDate: 10/10/2023
-content: "> [!TIP]\n> Dit onderdeel volgt de levenscyclus van het moederproduct, Windows Server 2012 R2.\n\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server 2012 R2](/lifecycle/)"
+  - version: Original Release
+    startDate: 11/25/2013
+    endDate: 10/10/2023
+content: |+
+  > [!TIP]
+  > Dit onderdeel volgt de levenscyclus van het moederproduct, Windows Server 2012 R2.
+
+  ## <a name="links"></a>Koppelingen 
+  * [Windows Server 2012 R2](/lifecycle/)
