--- a/lifecycle-data/products/excel-2016-for-mac.yml
+++ b/lifecycle-data/products/excel-2016-for-mac.yml
@@ -3,25 +3,19 @@ metadata:
   title: Excel 2016 voor Mac
   description: Excel 2016 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 669ce6b5a17f553274d47ddc9a3b61a4ffc539ff
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851983"
 name: Excel 2016 voor Mac
-summary: >+
+summary: |+
   Excel 2016 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 09/27/2015
   end: 10/13/2020
 releases:
-- version: Original Release
-  startDate: 09/27/2015
-  endDate: 10/13/2020
-content: ''
+  - version: Original Release
+    startDate: 09/27/2015
+    endDate: 10/13/2020
+content: |+
