--- a/lifecycle-data/products/microsoft-application-virtualization-51.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-51.yml
@@ -3,29 +3,30 @@ metadata:
   title: Microsoft Application Virtualization 5.1
   description: Microsoft Application Virtualization 5.1 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
-  keywords: for Remote Desktop Services,for Windows Desktops
-  ms.openlocfilehash: b6ca3da5136031bbb6e140f3fa5124ef7b2e4ed6
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "1001939"
+  keywords: 'for Remote Desktop Services,for Windows Desktops'
 name: Microsoft Application Virtualization 5.1
-summary: >+
+summary: |+
   Microsoft Application Virtualization 5.1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit geldt voor de volgende edities: voor Extern bureaublad-services, voor Windows-bureaubladen
 
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 11/01/2015
   end: 01/09/2018
   extendedEnd: 04/14/2026
 releases:
-- version: Original Release
-  startDate: 11/01/2015
-  endDate: 04/14/2026
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/microsoft-desktop-optimization-pack/appv-v5/microsoft-application-virtualization-50-administrators-guide)\n\n\n## <a name=\"editions\"></a>Edities \n* Voor Extern bureaublad-services\n* voor Windows Desktops"
+  - version: Original Release
+    startDate: 11/01/2015
+    endDate: 04/14/2026
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Productgegevens](/microsoft-desktop-optimization-pack/appv-v5/microsoft-application-virtualization-50-administrators-guide)
+
+
+  ## <a name="editions"></a>Edities 
+  * Voor Extern bureaublad-services
+  * voor Windows Desktops
