--- a/lifecycle-data/products/microsoft-visual-studio-net-2003.yml
+++ b/lifecycle-data/products/microsoft-visual-studio-net-2003.yml
@@ -3,32 +3,36 @@ metadata:
   title: Microsoft Visual Studio .NET 2003
   description: Microsoft Visual Studio .NET 2003 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
-  keywords: Enterprise Architect,Enterprise Developer,J#,Professional,Standard
-  ms.openlocfilehash: 4046adf6f4a20e8c0edfd77c6314c2ecbd321cb2
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "999386"
+  keywords: 'Enterprise Architect,Enterprise Developer,J#,Professional,Standard'
 name: Microsoft Visual Studio .NET 2003
-summary: >+
+summary: |+
   Microsoft Visual Studio .NET 2003 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
-
-  Dit is van toepassing op de volgende edities: Enterprise Architect, Enterprise Developer, J#, Professional, Standaard
+  Dit is van toepassing op de volgende edities: Enterprise Architect, Enterprise Developer, J#, Professional, Standard
 
 products:
-- vs
+  - vs
 policyType: fixed
 supportDates:
   start: 07/10/2003
   end: 10/14/2008
   extendedEnd: 10/08/2013
 releases:
-- version: Service Pack 1
-  startDate: 09/15/2006
-  endDate: 10/08/2013
-- version: Original Release
-  startDate: 07/10/2003
-  endDate: 10/09/2007
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise Architect\n* Enterprise Developer\n* J#\n* Professional\n* Standaard"
+  - version: Service Pack 1
+    startDate: 09/15/2006
+    endDate: 10/08/2013
+  - version: Original Release
+    startDate: 07/10/2003
+    endDate: 10/09/2007
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+
+  ## <a name="editions"></a>Edities 
+  * Enterprise Architect
+  * Enterprise Developer
+  * J#
+  * Professional
+  * Standard
