--- a/lifecycle-data/products/windows-10-mobile-enterprise-released-in-april-2017.yml
+++ b/lifecycle-data/products/windows-10-mobile-enterprise-released-in-april-2017.yml
@@ -1,24 +1,27 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Windows 10 Mobile Enterprise, uitgebracht in april 2017
-  description: Windows 10 Mobile Enterprise, uitgebracht in april 2017, volgt het vaste levenscyclusbeleid.
+  title: 'Windows 10 Mobile Enterprise, uitgebracht in april 2017'
+  description: 'Windows 10 Mobile Enterprise, uitgebracht in april 2017, volgt het vaste levenscyclusbeleid.'
   ms.date: 07/28/2020
-  ms.openlocfilehash: e5723a855fe7570c41c67907aa258410c83c8ab6
-  ms.sourcegitcommit: e15c32a90036b92acce9ef863cc808ad719160b8
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "868726"
-name: Windows 10 Mobile Enterprise, uitgebracht in april 2017
-summary: "Windows 10 Mobile Enterprise, uitgebracht in april 2017, volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+name: 'Windows 10 Mobile Enterprise, uitgebracht in april 2017'
+summary: |
+  Windows 10 Mobile Enterprise, uitgebracht in april 2017, volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+
+  > [!IMPORTANT]
+  > De ondersteuning voor dit product is beëindigd. 
 products:
-- windows
+  - windows
 policyType: fixed-mainstream-only
 supportDates:
   start: 04/25/2017
   end: 06/11/2019
 releases:
-- version: Original Release
-  startDate: 04/25/2017
-  endDate: 06/11/2019
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus van het apparaatbesturingssysteem](/lifecycle/faq/device-operating-systems)\n* [De ondersteuning voor Windows 10 Mobile is op 10 december 2019 beëindigd](/lifecycle/announcements/windows-10-mobile-end-of-support)"
+  - version: Original Release
+    startDate: 04/25/2017
+    endDate: 06/11/2019
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Veelgestelde vragen over de levenscyclus van het apparaatbesturingssysteem](/lifecycle/faq/device-operating-systems)
+  * [De ondersteuning voor Windows 10 Mobile is op 10 december 2019 beëindigd](/lifecycle/announcements/windows-10-mobile-end-of-support)
