--- a/lifecycle-data/products/windows-azure-pack-on-windows-server-2012-r2.yml
+++ b/lifecycle-data/products/windows-azure-pack-on-windows-server-2012-r2.yml
@@ -3,32 +3,33 @@ metadata:
   title: Windows Azure Pack (op Windows Server 2012 R2)
   description: Windows Azure Pack (op Windows Server 2012 R2) volgt het vaste levenscyclusbeleid.
   ms.date: 10/19/2020
-  keywords: 
-  ms.openlocfilehash: 38fe3e0f5e46d996504b594c78e8717330b720c0
-  ms.sourcegitcommit: 2898ade954d468d09e16a723f0685bbac5214be0
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 10/19/2020
-  ms.locfileid: "1160910"
+  keywords: null
 name: Windows Azure Pack (op Windows Server 2012 R2)
-summary: >+
+summary: |+
   Windows Azure Pack (op Windows Server 2012 R2) volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit geldt voor de volgende edities: op Windows Server 2012 R2
 
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 01/14/2014
   end: 07/11/2017
   extendedEnd: 07/12/2022
 releases:
-- version: on Windows Server 2012 R2
-  startDate: 01/14/2014
-  endDate: 07/12/2022
-- version: V2 Web Sites
-  startDate: 01/14/2014
-  endDate: 07/12/2022
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Windows Azure Pack-websites V2-ondersteuningsdatums levenscyclus](https://azure.github.io/AppService/2017/01/19/Revisiting-Windows-Azure-Pack-Web-Sites-V2-Support-Lifecycle-Dates.html)\n* [Windows Azure Pack voor Windows Server Productgegevens](/previous-versions/azure/windows-server-azure-pack/dn296435(v=technet.10))\n\n\n## <a name=\"editions\"></a>Edities \n* op Windows Server 2012 R2"
+  - version: on Windows Server 2012 R2
+    startDate: 01/14/2014
+    endDate: 07/12/2022
+  - version: V2 Web Sites
+    startDate: 01/14/2014
+    endDate: 07/12/2022
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Windows Azure Pack-websites V2-datums ondersteuning levenscyclus](https://azure.github.io/AppService/2017/01/19/Revisiting-Windows-Azure-Pack-Web-Sites-V2-Support-Lifecycle-Dates.html)
+  * [Windows Azure Pack voor Windows Server Productgegevens](/previous-versions/azure/windows-server-azure-pack/dn296435(v=technet.10))
+
+
+  ## <a name="editions"></a>Edities 
+  * op Windows Server 2012 R2
