--- a/lifecycle-data/products/windows-server-2008-r2.yml
+++ b/lifecycle-data/products/windows-server-2008-r2.yml
@@ -3,36 +3,53 @@ metadata:
   title: Windows Server 2008 R2
   description: Windows Server 2008 R2 volgt het vaste levenscyclusbeleid.
   ms.date: 04/23/2021
-  keywords: 
-  ms.openlocfilehash: 46aa19023778be7f5a94f58f76ba81119e32c6b7
-  ms.sourcegitcommit: 51a7221b87d358960376e2569c3b1e69ba056b54
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 06/25/2021
-  ms.locfileid: "2029870"
+  keywords: null
 name: Windows Server 2008 R2
-summary: "Windows Server 2008 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Datacenter, Enterprise, HPC Edition, op Itanium-gebaseerde systemen, Standard, Web\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. \n"
+summary: |
+  Windows Server 2008 R2 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+  Dit is van toepassing op de volgende edities: Datacenter, Enterprise, HPC Edition, op Itanium-gebaseerde systemen, Standard, Web
+
+  > [!IMPORTANT]
+  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie. 
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 10/22/2009
   end: 01/13/2015
   extendedEnd: 01/14/2020
 releases:
-- version: Extended Security Update Year 3
-  startDate: 01/11/2022
-  endDate: 01/10/2023
-- version: Extended Security Update Year 2
-  startDate: 01/12/2021
-  endDate: 01/11/2022
-- version: Extended Security Update Year 1
-  startDate: 01/14/2020
-  endDate: 01/12/2021
-- version: Service Pack 1
-  startDate: 02/22/2011
-  endDate: 01/14/2020
-- version: Original Release
-  startDate: 10/22/2009
-  endDate: 04/09/2013
-content: "> [!TIP]\n> *Voor de Datacenter-, Standaard-, Enterprise- en Embedded-edities van dit product zijn extra beveiligingsupdates (ESU) beschikbaar via specifieke volumelicentieprogramma's, en dit voor maximaal drie jaar na het einde van de ondersteuning. Neem contact op met uw Microsoft-partner of accountteam voor meer informatie. \n\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)\n* [Serverupgradegegevens](/windows-server/upgrade/upgrade-overview)\n* [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Datacenter\n* Enterprise\n* HPC Edition\n* Op Itanium-gebaseerde systemen\n* Standard\n* Web"
+  - version: Extended Security Update Year 3
+    startDate: 01/11/2022
+    endDate: 01/10/2023
+  - version: Extended Security Update Year 2
+    startDate: 01/12/2021
+    endDate: 01/11/2022
+  - version: Extended Security Update Year 1
+    startDate: 01/14/2020
+    endDate: 01/12/2021
+  - version: Service Pack 1
+    startDate: 02/22/2011
+    endDate: 01/14/2020
+  - version: Original Release
+    startDate: 10/22/2009
+    endDate: 04/09/2013
+content: |
+  > [!TIP]
+  > *Voor de Datacenter-, Standaard-, Enterprise- en Embedded-edities van dit product zijn extra beveiligingsupdates (ESU) beschikbaar via specifieke volumelicentieprogramma's, en dit voor maximaal drie jaar na het einde van de ondersteuning. Neem contact op met uw Microsoft-partner of accountteam voor meer informatie. 
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://aka.ms/AA1ovn4)
+  * [Serverupgradegegevens](/windows-server/upgrade/upgrade-overview)
+  * [Extended Security Update (ESU) programma](/lifecycle/faq/extended-security-updates)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+
+  ## <a name="editions"></a>Edities 
+  * Datacenter
+  * Enterprise
+  * HPC Edition
+  * Op Itanium-gebaseerde systemen
+  * Standard
+  * Web
