--- a/lifecycle-data/products/windows-storage-server-2016.yml
+++ b/lifecycle-data/products/windows-storage-server-2016.yml
@@ -3,29 +3,31 @@ metadata:
   title: Windows Storage Server 2016
   description: Windows Storage Server 2016 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Standard,Workgroup
-  ms.openlocfilehash: 3c0a7d1d5f6f5a73282c35ad96c1b0a036f938d1
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "938959"
+  keywords: 'Standard,Workgroup'
 name: Windows Storage Server 2016
-summary: >+
+summary: |+
   Windows Storage Server 2016 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit geldt voor de volgende edities: Standaard, Werkgroep
 
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 10/15/2016
   end: 01/11/2022
   extendedEnd: 01/12/2027
 releases:
-- version: Original Release
-  startDate: 10/15/2016
-  endDate: 01/12/2027
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)\n* [Productgegevens](/windows-server/storage/whats-new-in-storage)\n\n\n## <a name=\"editions\"></a>Edities \n* Standard\n* Workgroup"
+  - version: Original Release
+    startDate: 10/15/2016
+    endDate: 01/12/2027
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Veelgestelde vragen over de levenscyclus - Windows-producten](/lifecycle/faq/windows)
+  * [Productgegevens](/windows-server/storage/whats-new-in-storage)
+
+
+  ## <a name="editions"></a>Edities 
+  * Standard
+  * Workgroup
