--- a/lifecycle-data/products/microsoft-application-virtualization-hosting-51.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-hosting-51.yml
@@ -1,31 +1,31 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Application Virtualization Hosting 5.1 voor Windows Desktops
-  description: Microsoft Application Virtualization Hosting 5.1 voor Windows Desktops volgt het vaste levenscyclusbeleid.
+  title: Microsoft Application Virtualization Hosting 5.1 voor Windows-desktops
+  description: Microsoft Application Virtualization Hosting 5.1 voor Windows-bureaubladen volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
   keywords: for Windows Desktops
-  ms.openlocfilehash: 9296a136a0bc0da5a6d6b6b8b49d012170158da0
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "1000570"
-name: Microsoft Application Virtualization Hosting 5.1 voor Windows Desktops
-summary: >+
-  Microsoft Application Virtualization Hosting 5.1 voor Windows Desktops volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
+name: Microsoft Application Virtualization Hosting 5.1 voor Windows-desktops
+summary: |+
+  Microsoft Application Virtualization Hosting 5.1 voor Windows-bureaubladen volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
   Dit geldt voor de volgende edities: voor Windows Desktops
 
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 11/01/2015
   end: 01/09/2018
   extendedEnd: 04/14/2026
 releases:
-- version: Original Release
-  startDate: 11/01/2015
-  endDate: 04/14/2026
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Productgegevens](/microsoft-desktop-optimization-pack/appv-v4/overview-of-application-virtualization)\n\n\n## <a name=\"editions\"></a>Edities \n* voor Windows Desktops"
+  - version: Original Release
+    startDate: 11/01/2015
+    endDate: 04/14/2026
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Productgegevens](/microsoft-desktop-optimization-pack/appv-v4/overview-of-application-virtualization)
+
+
+  ## <a name="editions"></a>Edities 
+  * voor Windows Desktops
