--- a/lifecycle-data/products/microsoft-office-2008-for-mac.yml
+++ b/lifecycle-data/products/microsoft-office-2008-for-mac.yml
@@ -3,29 +3,40 @@ metadata:
   title: Microsoft Office 2008 voor Mac
   description: Microsoft Office 2008 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Business,Home and Student,Special Media Editon
-  ms.openlocfilehash: ba599ca4191c7e1a219f31d77797c9799adeca7c
-  ms.sourcegitcommit: c1ccf8aedb73c5410ef70b9d59a49b6f6746a52c
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 10/20/2020
-  ms.locfileid: "1162402"
+  keywords: 'Business,Home and Student,Special Media Editon'
 name: Microsoft Office 2008 voor Mac
-summary: "Microsoft Office 2008 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit is van toepassing op de volgende edities: Business, Thuisgebruik en Studenten, speciale media-editie\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+summary: |
+  Microsoft Office 2008 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+  Dit is van toepassing op de volgende edities: Business, Thuisgebruik en Studenten, speciale media-editie
+
+  > [!IMPORTANT]
+  > De ondersteuning voor dit product is beëindigd. 
 products:
-- office
+  - office
 policyType: fixed-mainstream-only
 supportDates:
   start: 01/15/2008
   end: 04/09/2013
 releases:
-- version: Service Pack 2
-  startDate: 07/20/2009
-  endDate: 04/09/2013
-- version: Service Pack 1
-  startDate: 05/13/2008
-  endDate: 10/12/2010
-- version: Original Release
-  startDate: 01/15/2008
-  endDate: 07/14/2009
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De begindatum voor de speciale media-editie van Office 2008 voor Mac is 12 maart 2008.\n\n## <a name=\"editions\"></a>Edities \n* Business\n* Thuisgebruik en Studenten\n* Speciale media-editie"
+  - version: Service Pack 2
+    startDate: 07/20/2009
+    endDate: 04/09/2013
+  - version: Service Pack 1
+    startDate: 05/13/2008
+    endDate: 10/12/2010
+  - version: Original Release
+    startDate: 01/15/2008
+    endDate: 07/14/2009
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+  > [!NOTE]
+  > De begindatum voor de speciale media-editie van Office 2008 voor Mac is 12 maart 2008.
+
+  ## <a name="editions"></a>Edities 
+  * Business
+  * Thuisgebruik en Studenten
+  * Speciale media-editie
