--- a/lifecycle-data/products/microsoft-search-server-2008.yml
+++ b/lifecycle-data/products/microsoft-search-server-2008.yml
@@ -3,24 +3,32 @@ metadata:
   title: Microsoft Search Server 2008
   description: Microsoft Search Server 2008 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
-  keywords: Express,Standard
-  ms.openlocfilehash: 897d34ffd003985cb2b60bebbc2db5d53614b443
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "999053"
+  keywords: 'Express,Standard'
 name: Microsoft Search Server 2008
-summary: "Microsoft Search Server 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.\n\nDit geldt voor de volgende edities: Express, Standard\n\n> [!IMPORTANT]\n> De ondersteuning voor dit product is beëindigd. \n"
+summary: |
+  Microsoft Search Server 2008 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
+
+  Dit geldt voor de volgende edities: Express, Standard
+
+  > [!IMPORTANT]
+  > De ondersteuning voor dit product is beëindigd. 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 06/03/2008
   end: 07/09/2013
   extendedEnd: 07/10/2018
 releases:
-- version: Original Release
-  startDate: 06/03/2008
-  endDate: 07/10/2018
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)\n\n\n## <a name=\"editions\"></a>Edities \n* Express\n* Standard"
+  - version: Original Release
+    startDate: 06/03/2008
+    endDate: 07/10/2018
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://techcommunity.microsoft.com/t5/Product-Life-Cycle/FAST-products-approaching-the-end-of-extended-support-in-2018/td-p/101710)
+
+
+  ## <a name="editions"></a>Edities 
+  * Express
+  * Standard
