--- a/lifecycle-data/products/microsoft-visual-j-version-20-redistributable-package-second-edition.yml
+++ b/lifecycle-data/products/microsoft-visual-j-version-20-redistributable-package-second-edition.yml
@@ -3,26 +3,26 @@ metadata:
   title: Microsoft Visual J# Versie 2.0 Redistributable Package tweede editie
   description: Herdistribueerbaar pakket tweede editie voor Microsoft Visual J# Version 2.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 13e81d8ba84a4aede4cd4df18a7e40d55de1d3dc
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "811927"
 name: Microsoft Visual J# Versie 2.0 Redistributable Package tweede editie
-summary: >+
+summary: |+
   Herdistribueerbaar pakket tweede editie voor Microsoft Visual J# Version 2.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- vs
+  - vs
 policyType: fixed
 supportDates:
   start: 08/27/2007
   end: 10/09/2012
   extendedEnd: 10/10/2017
 releases:
-- version: Original Release
-  startDate: 08/27/2007
-  endDate: 10/10/2017
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Ondersteuningsgegevens voor Visual J#](https://msdn.microsoft.com/vstudio/bb188593)\n\n> [!NOTE]\n> De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie."
+  - version: Original Release
+    startDate: 08/27/2007
+    endDate: 10/10/2017
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Ondersteuningsgegevens voor Visual J#](https://msdn.microsoft.com/vstudio/bb188593)
+
+  > [!NOTE]
+  > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
