--- a/lifecycle-data/products/office-xp.yml
+++ b/lifecycle-data/products/office-xp.yml
@@ -3,38 +3,40 @@ metadata:
   title: Office XP
   description: Office XP volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Developer,Professional,Proofing Tools,Standard,Web Components
-  ms.openlocfilehash: 5f0e3d5738f2f2107926d4cfe9c46de77fa5a875
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "928784"
+  keywords: 'Developer,Professional,Proofing Tools,Standard,Web Components'
 name: Office XP
-summary: >+
+summary: |+
   Office XP volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Developer, Professional, Taalprogramma's, Standaard, Web Components
 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 05/31/2001
   end: 07/11/2006
   extendedEnd: 07/12/2011
 releases:
-- version: Service Pack 3
-  startDate: 03/09/2004
-  endDate: 07/12/2011
-- version: Service Pack 2
-  startDate: 08/21/2002
-  endDate: 03/09/2005
-- version: Service Pack 1
-  startDate: 12/31/2001
-  endDate: 08/21/2003
-- version: Original Release
-  startDate: 05/31/2001
-  endDate: 12/31/2002
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Developer\n* Professional\n* Taalprogramma's\n* Standaard\n* Web Components"
+  - version: Service Pack 3
+    startDate: 03/09/2004
+    endDate: 07/12/2011
+  - version: Service Pack 2
+    startDate: 08/21/2002
+    endDate: 03/09/2005
+  - version: Service Pack 1
+    startDate: 12/31/2001
+    endDate: 08/21/2003
+  - version: Original Release
+    startDate: 05/31/2001
+    endDate: 12/31/2002
+content: |
+
+
+
+  ## <a name="editions"></a>Edities 
+  * Developer
+  * Professional
+  * Taalprogramma's
+  * Standard
+  * Web Components
