commit translated contents

--- a/lifecycle-data/products/microsoft-forefront-client-security.yml
+++ b/lifecycle-data/products/microsoft-forefront-client-security.yml
@@ -3,25 +3,25 @@ metadata:
   title: Microsoft Forefront Client Security
   description: Microsoft Forefront Client Security volgt het vaste levenscyclusbeleid.
   ms.date: 08/28/2020
-  ms.openlocfilehash: 335ae81ffa4b7cb64352b19e7330765a4cac6c68
-  ms.sourcegitcommit: 570c824dbe19150d37398333df7d2c416a51eac9
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 08/28/2020
-  ms.locfileid: "924250"
 name: Microsoft Forefront Client Security
-summary: >+
+summary: |+
   Microsoft Forefront Client Security volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- msc
+  - msc
 policyType: fixed
 supportDates:
   start: 08/02/2007
   extendedEnd: 07/14/2015
 releases:
-- version: Original Release
-  startDate: 08/02/2007
-  endDate: 07/14/2015
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [System Center Endpoint Protection](/lifecycle/products/microsoft-system-center-2012-endpoint-protection)\n\n> [!NOTE]\n> Forefront Client Security is per 14 juli 2015 stopgezet. Definitie-updates voor Antimalware en Antispyware zijn niet langer beschikbaar na het einde van de ondersteuning voor de productversie. Evalueer System Center Endpoint Protection als een vervanging."
+  - version: Original Release
+    startDate: 08/02/2007
+    endDate: 07/14/2015
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [System Center Endpoint Protection](/lifecycle/products/microsoft-system-center-2012-endpoint-protection)
+
+  > [!NOTE]
+  > Forefront Client Security is per 14 juli 2015 stopgezet. Definitie-updates voor Antimalware en Antispyware zijn niet langer beschikbaar na het einde van de ondersteuning voor de productversie. Evalueer System Center Endpoint Protection als een vervanging.
