--- a/lifecycle-data/products/microsoft-biztalk-server-2006.yml
+++ b/lifecycle-data/products/microsoft-biztalk-server-2006.yml
@@ -3,17 +3,10 @@ metadata:
   title: Microsoft BizTalk Server 2006
   description: Microsoft BizTalk Server 2006 volgt het vaste levenscyclusbeleid.
   ms.date: 05/26/2021
-  keywords: 
-  ms.openlocfilehash: e30deb68709ce277c61081ba9b705317e371b799
-  ms.sourcegitcommit: 51a7221b87d358960376e2569c3b1e69ba056b54
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 06/25/2021
-  ms.locfileid: "2029537"
+  keywords: null
 name: Microsoft BizTalk Server 2006
-summary: >+
+summary: |+
   Microsoft BizTalk Server 2006 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
 
   Dit is van toepassing op de volgende edities: Branch, Developer, Enterprise, Standard
@@ -21,14 +14,28 @@ summary: >+
 
 
 products:
-- microsoft-servers
+  - microsoft-servers
 policyType: fixed
 supportDates:
   start: 06/23/2006
   end: 07/12/2011
   extendedEnd: 07/12/2016
 releases:
-- version: Original Release
-  startDate: 06/23/2006
-  endDate: 07/12/2016
-content: "\n\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://social.technet.microsoft.com/wiki/contents/articles/18709.biztalk-server-product-lifecycle.aspx)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n\n\n## <a name=\"editions\"></a>Edities \n* Branch\n* Developer\n* Enterprise\n* Standard"
+  - version: Original Release
+    startDate: 06/23/2006
+    endDate: 07/12/2016
+content: |+
+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://social.technet.microsoft.com/wiki/contents/articles/18709.biztalk-server-product-lifecycle.aspx)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+
+
+
+  ## <a name="editions"></a>Edities 
+  * Branch
+  * Developer
+  * Enterprise
+  * Standard
