--- a/lifecycle-data/products/microsoft-forefront-server-security-management-console.yml
+++ b/lifecycle-data/products/microsoft-forefront-server-security-management-console.yml
@@ -3,25 +3,19 @@ metadata:
   title: Microsoft Forefront Server Security Management Console
   description: Microsoft Forefront Server Security Management Console volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 79937f95580b655b318e965e2ef659931323ff8d
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812390"
 name: Microsoft Forefront Server Security Management Console
-summary: >+
+summary: |+
   Microsoft Forefront Server Security Management Console volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- office
+  - office
 policyType: fixed-mainstream-only
 supportDates:
   start: 01/10/2008
   end: 04/08/2014
 releases:
-- version: Original Release
-  startDate: 01/10/2008
-  endDate: 04/08/2014
-content: ''
+  - version: Original Release
+    startDate: 01/10/2008
+    endDate: 04/08/2014
+content: |+
