--- a/lifecycle-data/products/microsoft-net-and-net-core.yml
+++ b/lifecycle-data/products/microsoft-net-and-net-core.yml
@@ -3,45 +3,52 @@ metadata:
   title: Microsoft .NET en .NET Core
   description: Microsoft .NET en .NET Core volgen het moderne levenscyclusbeleid.
   ms.date: 12/17/2020
-  keywords: ASP.NET Core,Entity Framework Core
-  ms.openlocfilehash: 6052955c370906a7e2ecc16cc1d24b3e055adc89
-  ms.sourcegitcommit: f4e86f7c87c4574636289408f511574ac20127a0
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 12/17/2020
-  ms.locfileid: "1347357"
+  keywords: 'ASP.NET Core,Entity Framework Core'
 name: Microsoft .NET en .NET Core
-summary: >+
+summary: |+
   Microsoft .NET en .NET Core volgen het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
-- dotnet
+  - dotnet
 policyType: modern-on-prem
 supportDates:
   start: 06/27/2016
 releases:
-- version: .NET 5.0
-  startDate: 11/10/2020
-- version: .NET Core 3.1 (LTS)
-  startDate: 12/03/2019
-  endDate: 12/03/2022
-- version: .NET Core 3.0
-  startDate: 09/23/2019
-  endDate: 03/03/2020
-- version: .NET Core 2.2
-  startDate: 12/04/2018
-  endDate: 12/23/2019
-- version: .NET Core 2.1 (LTS)
-  startDate: 05/30/2018
-  endDate: 08/21/2021
-- version: .NET Core 2.0
-  startDate: 08/14/2017
-  endDate: 10/01/2018
-- version: .NET Core 1.1
-  startDate: 11/16/2016
-  endDate: 06/27/2019
-- version: .NET Core 1.0
-  startDate: 06/27/2016
-  endDate: 06/27/2019
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [.NET Core-ondersteuningsgegevens (dotnet)](https://dotnet.microsoft.com/platform/support/policy/dotnet-core)\n* [.NET Core releaseschema](https://github.com/dotnet/core/blob/master/roadmap.md)\n* [.NET Core productroadmap](https://github.com/dotnet/core/blob/master/product-roadmap/current.md)\n* [Veelgestelde vragen over levenscyclus - .NET Core](/lifecycle/faq/dotnet-core)\n* [ASP.NET en ASP.NET Core ondersteuningsdetails](https://dotnet.microsoft.com/platform/support/policy/aspnet)\n* [Ondersteuningsgegevens Entity Framework](/ef/core/what-is-new)\n\n> [!NOTE]\n> Beginnend met .NET 5.0, is Microsoft .NET Core omgedoopt tot .NET. \n>\n>ASP.NET Core en Entity Framework Core volgen dezelfde levenscyclus als .NET Core."
+  - version: .NET 5.0
+    startDate: 11/10/2020
+  - version: .NET Core 3.1 (LTS)
+    startDate: 12/03/2019
+    endDate: 12/03/2022
+  - version: .NET Core 3.0
+    startDate: 09/23/2019
+    endDate: 03/03/2020
+  - version: .NET Core 2.2
+    startDate: 12/04/2018
+    endDate: 12/23/2019
+  - version: .NET Core 2.1 (LTS)
+    startDate: 05/30/2018
+    endDate: 08/21/2021
+  - version: .NET Core 2.0
+    startDate: 08/14/2017
+    endDate: 10/01/2018
+  - version: .NET Core 1.1
+    startDate: 11/16/2016
+    endDate: 06/27/2019
+  - version: .NET Core 1.0
+    startDate: 06/27/2016
+    endDate: 06/27/2019
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [.NET Core-ondersteuningsgegevens (dotnet)](https://dotnet.microsoft.com/platform/support/policy/dotnet-core)
+  * [.NET Core releaseschema](https://github.com/dotnet/core/blob/master/roadmap.md)
+  * [.NET Core productroadmap](https://github.com/dotnet/core/blob/master/product-roadmap/current.md)
+  * [Veelgestelde vragen over levenscyclus - .NET Core](/lifecycle/faq/dotnet-core)
+  * [ASP.NET en ASP.NET Core ondersteuningsdetails](https://dotnet.microsoft.com/platform/support/policy/aspnet)
+  * [Ondersteuningsgegevens Entity Framework](/ef/core/what-is-new)
+
+  > [!NOTE]
+  > Beginnend met .NET 5.0, is Microsoft .NET Core omgedoopt tot .NET. 
+  >
+  >ASP.NET Core en Entity Framework Core volgen dezelfde levenscyclus als .NET Core.
