--- a/lifecycle-data/products/microsoft-office-2007.yml
+++ b/lifecycle-data/products/microsoft-office-2007.yml
@@ -1,40 +1,48 @@
 ### YamlMime:Lifecycle
 metadata:
   title: Microsoft Office 2007
-  description: Microsoft Office 2007 volgt het vaste levenscyclusbeleid.
+  description: Microsoft Office 2007 volgt het beleid voor de vaste levenscyclus.
   ms.date: 09/01/2020
-  keywords: Basic,Enterprise,Home and Student,Multi Language Pack,Professional,Professional Plus,Small Business,Standard,Ultimate
-  ms.openlocfilehash: 9ae47c5cee79a22aa61684c3dc132896aeacfc01
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "936776"
+  keywords: 'Basic,Enterprise,Home and Student,Multi Language Pack,Professional,Professional Plus,Small Business,Standard,Ultimate'
 name: Microsoft Office 2007
-summary: >+
-  Microsoft Office 2007 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
+summary: |+
+  Microsoft Office 2007 volgt het beleid voor de [vaste](/lifecycle/policies/fixed) levenscyclus.
 
   Dit is van toepassing op de volgende edities: Basic, Enterprise, Thuisgebruik en Studenten, Multi-Language Pack, Professional, Professional Plus, Kleine Bedrijven, Standaard, Ultimate
 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 01/27/2007
   end: 10/09/2012
   extendedEnd: 10/10/2017
 releases:
-- version: Service Pack 3
-  startDate: 10/25/2011
-  endDate: 10/10/2017
-- version: Service Pack 2
-  startDate: 04/28/2009
-  endDate: 01/08/2013
-- version: Service Pack 1
-  startDate: 12/11/2007
-  endDate: 07/13/2010
-- version: Original Release
-  startDate: 01/27/2007
-  endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://support.microsoft.com/kb/3198497)\n\n\n## <a name=\"editions\"></a>Edities \n* Basic\n* Enterprise\n* Thuisgebruik en Studenten\n* Multi-Language Pack\n* Professional\n* Professional Plus\n* Kleine Bedrijven\n* Standaard\n* Ultimate"
+  - version: Service Pack 3
+    startDate: 10/25/2011
+    endDate: 10/10/2017
+  - version: Service Pack 2
+    startDate: 04/28/2009
+    endDate: 01/08/2013
+  - version: Service Pack 1
+    startDate: 12/11/2007
+    endDate: 07/13/2010
+  - version: Original Release
+    startDate: 01/27/2007
+    endDate: 01/13/2009
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://support.microsoft.com/kb/3198497)
+
+
+  ## <a name="editions"></a>Edities 
+  * Basic
+  * Enterprise
+  * Thuisgebruik en Studenten
+  * Multi-Language Pack
+  * Professional
+  * Professional Plus
+  * Small Business
+  * Standard
+  * Ultimate
