--- a/lifecycle-data/products/microsoft-office-2016-for-mac.yml
+++ b/lifecycle-data/products/microsoft-office-2016-for-mac.yml
@@ -3,28 +3,28 @@ metadata:
   title: Microsoft Office 2016 voor Mac
   description: Microsoft Office 2016 voor Mac volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Home and Business,Home and Student,Standard
-  ms.openlocfilehash: b92cf0db708d566826b8d260ef9026bc308c41ce
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "936295"
+  keywords: 'Home and Business,Home and Student,Standard'
 name: Microsoft Office 2016 voor Mac
-summary: >+
+summary: |+
   Microsoft Office 2016 voor Mac volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Thuisgebruik en Zelfstandigen, Thuisgebruik en Studenten, Standard
 
 products:
-- office
+  - office
 policyType: fixed
 supportDates:
   start: 09/22/2015
   end: 10/13/2020
 releases:
-- version: Original Release
-  startDate: 09/22/2015
-  endDate: 10/13/2020
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Thuisgebruik en Zelfstandigen\n* Thuisgebruik en Studenten\n* Standard"
+  - version: Original Release
+    startDate: 09/22/2015
+    endDate: 10/13/2020
+content: |
+
+
+
+  ## <a name="editions"></a>Edities 
+  * Thuisgebruik en Zelfstandigen
+  * Thuisgebruik en Studenten
+  * Standard
