--- a/lifecycle-data/products/microsoft-service-fabric-standalone-package-for-windows-server.yml
+++ b/lifecycle-data/products/microsoft-service-fabric-standalone-package-for-windows-server.yml
@@ -3,23 +3,20 @@ metadata:
   title: Zelfstandig Service Fabric-pakket voor Windows Server
   description: Het zelfstandig Service Fabric-pakket voor Windows Server volgt het moderne levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: d1876355f78b6c35bded38d9b1cbd039d4f0cd91
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "851963"
 name: Zelfstandig Service Fabric-pakket voor Windows Server
-summary: >+
+summary: |+
   Het zelfstandig Service Fabric-pakket voor Windows Server volgt het [moderne](/lifecycle/policies/modern) levenscyclusbeleid.
 
 
 products:
-- windows
+  - windows
 policyType: modern-online
 supportDates:
   start: 09/26/2016
 releases:
-- version: Original Release
-  startDate: 09/26/2016
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Onderhoudsinformatie](/azure/service-fabric/service-fabric-support)"
+  - version: Original Release
+    startDate: 09/26/2016
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Onderhoudsinformatie](/azure/service-fabric/service-fabric-support)
