--- a/lifecycle-data/products/microsoft-system-center-configuration-manager-2007-r3.yml
+++ b/lifecycle-data/products/microsoft-system-center-configuration-manager-2007-r3.yml
@@ -3,30 +3,26 @@ metadata:
   title: Microsoft System Center Configuration Manager 2007 R3
   description: Microsoft System Center Configuration Manager 2007 R3 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: cffcc1c2bb51fc5023fe6ad29d62132141ffedb2
-  ms.sourcegitcommit: 6b0f0d4ac042ba924016a386cd23db5f1ed22756
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "852081"
 name: Microsoft System Center Configuration Manager 2007 R3
-summary: >
+summary: |
   Microsoft System Center Configuration Manager 2007 R3 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
-
   > [!IMPORTANT]
-
   > De ondersteuning voor dit product is beëindigd. Zie hieronder de richtlijnen voor migratie.
 products:
-- msc
+  - msc
 policyType: fixed
 supportDates:
   start: 12/19/2010
   end: 07/08/2014
   extendedEnd: 07/09/2019
 releases:
-- version: Original Release
-  startDate: 12/19/2010
-  endDate: 07/09/2019
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](/mem/configmgr/core/migration/migrate-data-between-hierarchies)\n* [Aanvullende migratierichtlijnen](/mem/configmgr/core/migration/planning-for-migration)"
+  - version: Original Release
+    startDate: 12/19/2010
+    endDate: 07/09/2019
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](/mem/configmgr/core/migration/migrate-data-between-hierarchies)
+  * [Aanvullende migratierichtlijnen](/mem/configmgr/core/migration/planning-for-migration)
