--- a/lifecycle-data/products/microsoft-internet-information-services-70.yml
+++ b/lifecycle-data/products/microsoft-internet-information-services-70.yml
@@ -3,23 +3,22 @@ metadata:
   title: Microsoft Internet Information Services 7.0
   description: Microsoft Internet Information Services 7.0 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 2db2bbc83343f99aea9be4749fa1fcd0aeb12220
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812759"
 name: Microsoft Internet Information Services 7.0
-summary: >+
+summary: |+
   Microsoft Internet Information Services 7.0 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
-- windows
+  - windows
 policyType: component
 supportDates:
   start: 01/25/2007
 releases:
-- version: Original Release
-  startDate: 01/25/2007
-content: "> [!TIP]\n> Deze release staat bekend als een onderdeel dat de ondersteuningslevenscyclus volgt van het bovenliggende hoofdproduct, Windows Server 2008.\n\n## <a name=\"links\"></a>Koppelingen \n* [Windows Server 2008](/lifecycle/products/windows-server-2008)"
+  - version: Original Release
+    startDate: 01/25/2007
+content: |+
+  > [!TIP]
+  > Deze release staat bekend als een onderdeel dat de ondersteuningslevenscyclus volgt van het bovenliggende hoofdproduct, Windows Server 2008.
+
+  ## <a name="links"></a>Koppelingen 
+  * [Windows Server 2008](/lifecycle/products/windows-server-2008)
