--- a/lifecycle-data/products/microsoft-application-virtualization-hosting-46.yml
+++ b/lifecycle-data/products/microsoft-application-virtualization-hosting-46.yml
@@ -1,40 +1,43 @@
 ### YamlMime:Lifecycle
 metadata:
-  title: Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops
+  title: Microsoft Application Virtualization Hosting 4.6 voor Windows-desktops
   description: Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
   keywords: for Windows Desktops
-  ms.openlocfilehash: 8a32729ae5fbf7f57a14b6a6ec048c7a1f412a52
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "935444"
-name: Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops
-summary: >+
+name: Microsoft Application Virtualization Hosting 4.6 voor Windows-desktops
+summary: |+
   Microsoft Application Virtualization Hosting 4.6 voor Windows Desktops volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit geldt voor de volgende edities: voor Windows Desktops
 
 products:
-- windows
+  - windows
 policyType: fixed
 supportDates:
   start: 05/27/2010
   end: 07/14/2015
   extendedEnd: 07/14/2020
 releases:
-- version: Service Pack 3
-  startDate: 12/02/2013
-  endDate: 07/14/2020
-- version: Service Pack 2
-  startDate: 10/01/2012
-  endDate: 01/13/2015
-- version: Service Pack 1
-  startDate: 01/26/2011
-  endDate: 10/08/2013
-- version: Original Release
-  startDate: 05/27/2010
-  endDate: 04/10/2012
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Product- en migratiegegevens](/microsoft-desktop-optimization-pack/appv-v4/overview-of-application-virtualization)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> Aangezien App-V 4.6-client gebruikmaakt van de App-V 4.5-server, wordt de App-V 4.5-server verder ondersteund op basis van de datums van de levenscyclus van App-V 4.6 wanneer deze wordt gebruikt met de ondersteunde App-V 4.6-client.\n\n## <a name=\"editions\"></a>Edities \n* voor Windows Desktops"
+  - version: Service Pack 3
+    startDate: 12/02/2013
+    endDate: 07/14/2020
+  - version: Service Pack 2
+    startDate: 10/01/2012
+    endDate: 01/13/2015
+  - version: Service Pack 1
+    startDate: 01/26/2011
+    endDate: 10/08/2013
+  - version: Original Release
+    startDate: 05/27/2010
+    endDate: 04/10/2012
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Product- en migratiegegevens](/microsoft-desktop-optimization-pack/appv-v4/overview-of-application-virtualization)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+  > [!NOTE]
+  > Aangezien App-V 4.6-client gebruikmaakt van de App-V 4.5-server, wordt de App-V 4.5-server verder ondersteund op basis van de datums van de levenscyclus van App-V 4.6 wanneer deze wordt gebruikt met de ondersteunde App-V 4.6-client.
+
+  ## <a name="editions"></a>Edities 
+  * voor Windows Desktops
