--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-rosettanet-30.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-rosettanet-30.yml
@@ -3,29 +3,28 @@ metadata:
   title: Microsoft BizTalk Accelerator voor RosettaNet 3.0
   description: Microsoft BizTalk Accelerator voor RosettaNet 3.0 volgt het vaste levenscyclusbeleid.
   ms.date: 09/01/2020
-  keywords: Enterprise,Standard
-  ms.openlocfilehash: 1a27e01c802b94c72dbcab51e79d200fb0877182
-  ms.sourcegitcommit: af46dd09ccdabd80dcc49d2cd930cefa0b1ab8a6
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "934815"
+  keywords: 'Enterprise,Standard'
 name: Microsoft BizTalk Accelerator voor RosettaNet 3.0
-summary: >+
+summary: |+
   Microsoft BizTalk Accelerator voor RosettaNet 3.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
-- microsoft-servers
+  - microsoft-servers
 policyType: fixed
 supportDates:
   start: 02/22/2005
   end: 04/13/2010
   extendedEnd: 04/14/2015
 releases:
-- version: Original Release
-  startDate: 02/22/2005
-  endDate: 04/14/2015
-content: "\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
+  - version: Original Release
+    startDate: 02/22/2005
+    endDate: 04/14/2015
+content: |
+
+
+
+  ## <a name="editions"></a>Edities 
+  * Enterprise
+  * Standard
