--- a/lifecycle-data/products/microsoft-biztalk-accelerator-for-swift-21.yml
+++ b/lifecycle-data/products/microsoft-biztalk-accelerator-for-swift-21.yml
@@ -3,32 +3,33 @@ metadata:
   title: Microsoft BizTalk Accelerator voor SWIFT 2.1
   description: Microsoft BizTalk Accelerator voor SWIFT 2.1 volgt het vaste levenscyclusbeleid.
   ms.date: 09/10/2020
-  keywords: Enterprise,Standard
-  ms.openlocfilehash: 4690a58d3edb34b38381bf2afc596f0086952daf
-  ms.sourcegitcommit: c0c65f657b1da8e588fda5bedd3572fb2e3168bc
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 09/10/2020
-  ms.locfileid: "1000079"
+  keywords: 'Enterprise,Standard'
 name: Microsoft BizTalk Accelerator voor SWIFT 2.1
-summary: >+
+summary: |+
   Microsoft BizTalk Accelerator voor SWIFT 2.1 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
-
 
   Dit is van toepassing op de volgende edities: Enterprise, Standard
 
 products:
-- microsoft-servers
+  - microsoft-servers
 policyType: fixed
 supportDates:
   start: 07/21/2005
   end: 10/12/2010
   extendedEnd: 10/13/2015
 releases:
-- version: Service Pack 1
-  startDate: 09/25/2006
-  endDate: 10/13/2015
-- version: Original Release
-  startDate: 07/21/2005
-  endDate: 10/14/2008
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n\n## <a name=\"editions\"></a>Edities \n* Enterprise\n* Standard"
+  - version: Service Pack 1
+    startDate: 09/25/2006
+    endDate: 10/13/2015
+  - version: Original Release
+    startDate: 07/21/2005
+    endDate: 10/14/2008
+content: |
+
+  ## <a name="links"></a>Koppelingen 
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+
+  ## <a name="editions"></a>Edities 
+  * Enterprise
+  * Standard
