--- a/lifecycle-data/products/microsoft-forecaster-70.yml
+++ b/lifecycle-data/products/microsoft-forecaster-70.yml
@@ -3,41 +3,42 @@ metadata:
   title: Microsoft Forecaster 7.0
   description: Microsoft Forecaster 7.0 volgt het vaste levenscyclusbeleid.
   ms.date: 07/28/2020
-  ms.openlocfilehash: e9af608bbdf2d19517b58ebe46d545b09078be8d
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812395"
 name: Microsoft Forecaster 7.0
-summary: >+
+summary: |+
   Microsoft Forecaster 7.0 volgt het [vaste](/lifecycle/policies/fixed) levenscyclusbeleid.
 
 
 products:
-- dynamics
+  - dynamics
 policyType: fixed
 supportDates:
   start: 05/30/2007
   end: 07/08/2014
   extendedEnd: 07/09/2019
 releases:
-- version: Service Pack 5
-  startDate: 05/19/2014
-  endDate: 07/09/2019
-- version: Service Pack 4
-  startDate: 06/27/2011
-  endDate: 07/14/2015
-- version: Service Pack 3
-  startDate: 03/31/2009
-  endDate: 07/10/2012
-- version: Service Pack 2
-  startDate: 06/13/2008
-  endDate: 04/13/2010
-- version: Service Pack 1
-  startDate: 11/01/2007
-  endDate: 07/14/2009
-- version: Original Release
-  startDate: 05/30/2007
-  endDate: 01/13/2009
-content: "\n## <a name=\"links\"></a>Koppelingen \n* [Richtlijnen voor migratie](https://mbs.microsoft.com/customersource/northamerica/news-events/news-events/news/ForecasterDiscontinuationNoticeGP)\n* [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)\n\n> [!NOTE]\n> De ondersteuning van Forecaster eindigt op de aangegeven datum, tenzij deze wordt verdeeld als onderdeel van een Dynamics-product. De datums van de levenscyclus van Dynamics hebben voorrang op de datum van Forecaster wanneer deze met een Dynamics-product wordt verdeeld."
+  - version: Service Pack 5
+    startDate: 05/19/2014
+    endDate: 07/09/2019
+  - version: Service Pack 4
+    startDate: 06/27/2011
+    endDate: 07/14/2015
+  - version: Service Pack 3
+    startDate: 03/31/2009
+    endDate: 07/10/2012
+  - version: Service Pack 2
+    startDate: 06/13/2008
+    endDate: 04/13/2010
+  - version: Service Pack 1
+    startDate: 11/01/2007
+    endDate: 07/14/2009
+  - version: Original Release
+    startDate: 05/30/2007
+    endDate: 01/13/2009
+content: |+
+
+  ## <a name="links"></a>Koppelingen 
+  * [Richtlijnen voor migratie](https://mbs.microsoft.com/customersource/northamerica/news-events/news-events/news/ForecasterDiscontinuationNoticeGP)
+  * [Servicepackbeleid](/lifecycle/policies/fixed#service-packs)
+
+  > [!NOTE]
+  > De ondersteuning van Forecaster eindigt op de aangegeven datum, tenzij deze wordt verdeeld als onderdeel van een Dynamics-product. De datums van de levenscyclus van Dynamics hebben voorrang op de datum van Forecaster wanneer deze met een Dynamics-product wordt verdeeld.
