--- a/lifecycle-data/products/microsoft-internet-information-services-60.yml
+++ b/lifecycle-data/products/microsoft-internet-information-services-60.yml
@@ -3,23 +3,21 @@ metadata:
   title: Microsoft Internet Information Services 6.0
   description: Microsoft Internet Information Services 6.0 volgt het levenscyclusbeleid voor onderdelen.
   ms.date: 07/28/2020
-  ms.openlocfilehash: 9fa80841324fc24ce8644f57af455c1a512c817f
-  ms.sourcegitcommit: 9bdc77ca92cba2e3edb432e57b1845247a9ade6e
-  ms.translationtype: HT
-  ms.contentlocale: nl-NL
-  ms.lasthandoff: 07/28/2020
-  ms.locfileid: "812383"
 name: Microsoft Internet Information Services 6.0
-summary: >+
+summary: |+
   Microsoft Internet Information Services 6.0 volgt het levenscyclusbeleid voor [onderdelen](/lifecycle/faq/fixed-policy#how-is-a-component-supported-under-the-fixed-lifecycle-policy).
 
 
 products:
-- windows
+  - windows
 policyType: component
 supportDates:
   start: 05/28/2003
 releases:
-- version: Original Release
-  startDate: 05/28/2003
-content: "\n\n> [!NOTE]\n> Deze release staat bekend als een onderdeel dat de ondersteuningslevenscyclus volgt van het bovenliggende hoofdproduct, Windows Server 2003."
+  - version: Original Release
+    startDate: 05/28/2003
+content: |+
+
+
+  > [!NOTE]
+  > Deze release staat bekend als een onderdeel dat de ondersteuningslevenscyclus volgt van het bovenliggende hoofdproduct, Windows Server 2003.
